syntax = "proto3";

package indexer.v1;

message Batch {
  uint64 total_output_amount = 1;
  int32 total_output_vtxos = 2;
  int64 expires_at = 3;
  bool swept = 4;
}

message Outpoint {
  string txid = 1;
  uint32 vout = 2;
}

message Node {
  string txid = 1;
  map<uint32, string> children = 2; // vout -> txid
}

message Vtxo {
  Outpoint outpoint = 1;
  int64 created_at = 2;
  int64 expires_at = 3;
  uint64 amount = 4;
  string script = 5;
  bool is_preconfirmed = 6;
  bool is_swept = 7;
  bool is_unrolled = 8;
  bool is_spent = 9;
  string spent_by = 10;
  repeated string commitment_txids = 11;
  string settled_by = 12;
  string ark_txid = 13;
}

message Chain {
  string txid = 1;
  int64 expires_at = 2;
  ChainedTxType type = 3;
  // txids of the transactions in the chain used as input of the current tx
  repeated string spends = 4;
}

message TxHistoryRecord {
  oneof key {
    string commitment_txid = 1;
    string virtual_txid = 2;
  }
  TxType type = 3;
  uint64 amount = 4;
  int64 created_at = 5;
  bool is_settled = 6;
  string settled_by = 7;
}

enum TxType {
  TX_TYPE_UNSPECIFIED = 0;
  TX_TYPE_RECEIVED = 1;
  TX_TYPE_SENT = 2;
}

enum ChainedTxType {
  CHAINED_TX_TYPE_UNSPECIFIED = 0;
  CHAINED_TX_TYPE_COMMITMENT = 1;
  CHAINED_TX_TYPE_ARK = 2;
  CHAINED_TX_TYPE_TREE = 3;
  CHAINED_TX_TYPE_CHECKPOINT = 4;
}

message PageRequest {
  int32 size = 1;
  int32 index = 2;
}

message PageResponse {
  int32 current = 1;
  int32 next = 2;
  int32 total = 3;
}

message TxData {
  string txid = 1;
  string tx = 2;
}

message Heartbeat {
}

message SubscriptionEvent {
  string txid = 1;
  repeated string scripts = 2;
  repeated Vtxo new_vtxos = 3;
  repeated Vtxo spent_vtxos = 4;
  string tx = 5;
  map<string, TxData> checkpoint_txs = 6;
  repeated Vtxo swept_vtxos = 7;
}